--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -15,8 +15,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.6.2",
-    "vite": "^6.3.1"
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -26,6 +25,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0"
+    "globals": "^16.0.0",
+    "vite": "^6.3.1"
   }
 }
